<resources>
    <string name="app_name">otp_mobile</string>
    <string name="wwe_will_send_you_an_one_time_otp_on_this_given_mobile_number">we will send you an one time otp on this given mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="get_otp">Get Otp</string>
    <string name="please_enter_the_otp_sent_to_you">Please Enter the OTP sent to you</string>
</resources>